--- a/src/GanttComponents/Pages/TimelineDemo.razor
+++ b/src/GanttComponents/Pages/TimelineDemo.razor
@@ -281,7 +281,7 @@
     private GanttTask? SelectedTaskInfo { get; set; }
     
     // Zoom state properties
-    private TimelineZoomLevel CurrentZoomLevel { get; set; } = TimelineZoomLevel.QuarterMonth24px;
+    private TimelineZoomLevel CurrentZoomLevel { get; set; } = TimelineZoomLevel.MonthWeekOptimal50px;
     private double CurrentZoomFactor { get; set; } = 1.6; // Maintain current 40px day width
     
     // Calculated properties
