--- a/src/GanttComponents/Pages/TimelineHeaderTemplateValidation.razor
+++ b/src/GanttComponents/Pages/TimelineHeaderTemplateValidation.razor
@@ -254,7 +254,7 @@
 
     // UI State
     private bool IsRunningTests = false;
-    private TimelineZoomLevel CurrentZoomLevel = TimelineZoomLevel.QuarterMonth24px;
+    private TimelineZoomLevel CurrentZoomLevel = TimelineZoomLevel.MonthWeekOptimal50px;
     private TimelineHeaderTemplate? CurrentTemplate = null;
 
     // Test Results
