--- a/src/GanttComponents/Pages/ZoomPresetsDemo.razor
+++ b/src/GanttComponents/Pages/ZoomPresetsDemo.razor
@@ -177,7 +177,7 @@
 </div>
 
 @code {
-    private TimelineZoomLevel currentZoomLevel = TimelineZoomLevel.QuarterMonth24px;
+    private TimelineZoomLevel currentZoomLevel = TimelineZoomLevel.MonthWeekOptimal50px;
     private double currentZoomFactor = 1.0;
 
     private Task OnZoomLevelChanged(TimelineZoomLevel newLevel)
