--- a/src/GanttComponents/Components/GanttComposer/GanttComposer.razor
+++ b/src/GanttComponents/Components/GanttComposer/GanttComposer.razor
@@ -77,6 +77,7 @@
     {
         if (firstRender)
         {
+            Logger.LogDebugInfo($"GanttComposer header heights - Total: {HeaderHeight}, Month: {TimelineHeaderMonthHeight}, Day: {TimelineHeaderDayHeight}");
             await InitializeScrollSynchronization();
             await InitializeSplitter();
             await EnforceRowAlignment();
