--- a/src/GanttComponents/Pages/_Layout.cshtml
+++ b/src/GanttComponents/Pages/_Layout.cshtml
@@ -10,6 +10,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
+    <link href="Components/TimelineView/TimelineView.css" rel="stylesheet" />
     <link href="css/i18n.css" rel="stylesheet" />
     <link href="GanttComponents.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
