--- a/src/GanttComponents/Pages/_Layout.cshtml
+++ b/src/GanttComponents/Pages/_Layout.cshtml
@@ -10,7 +10,16 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="Components/TimelineView/TimelineView.css" rel="stylesheet" />
+    <!-- TimelineView Level-Specific CSS - Maximum Isolation Architecture -->
+    <link href="Components/TimelineView/css/TimelineView.Shared.css" rel="stylesheet" />
+    <link href="Components/TimelineView/css/TimelineView.MonthWeek30px.css" rel="stylesheet" />
+    <link href="Components/TimelineView/css/TimelineView.MonthWeek40px.css" rel="stylesheet" />
+    <link href="Components/TimelineView/css/TimelineView.MonthWeek50px.css" rel="stylesheet" />
+    <link href="Components/TimelineView/css/TimelineView.MonthWeek60px.css" rel="stylesheet" />
+    <link href="Components/TimelineView/css/TimelineView.WeekDay30px.css" rel="stylesheet" />
+    <link href="Components/TimelineView/css/TimelineView.WeekDay40px.css" rel="stylesheet" />
+    <link href="Components/TimelineView/css/TimelineView.WeekDay50px.css" rel="stylesheet" />
+    <link href="Components/TimelineView/css/TimelineView.WeekDay60px.css" rel="stylesheet" />
     <link href="css/i18n.css" rel="stylesheet" />
     <link href="GanttComponents.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
