--- a/src/GanttComponents/Pages/_Layout.cshtml
+++ b/src/GanttComponents/Pages/_Layout.cshtml
@@ -40,5 +40,6 @@
 
     <script src="_framework/blazor.server.js"></script>
     <script src="js/gantt-composer.js"></script>
+    <script src="js/timeline-view.js"></script>
 </body>
 </html>
